--- a/bin/checkExecNew.in
+++ b/bin/checkExecNew.in
@@ -248,7 +248,8 @@ function main()
 end
 
 function options()
-   local masterTbl = masterTbl()
+   local masterTbl     = masterTbl()
+   local Version       = "1.6.2"
    local usage         = "Usage: checkExec [options] exec"
    local cmdlineParser = Optiks:new{usage=usage, version=Version}
 
