testing reverse map

--- a/bin/checkExecNew.in
+++ b/bin/checkExecNew.in
@@ -119,7 +119,7 @@ function matchExecWmodules(reverseMapT, ldd)
       end
    end
    
-   varDumpT(execT)
+   vardumpT(execT)
 
 
    ---if (not mpiN) then
