--- a/Makefile.in
+++ b/Makefile.in
@@ -8,7 +8,7 @@ DIRLIST		:= $(DESTDIR)$(BIN)
 
 MAINDIR         := configure.ac Makefile.in configure
 STANDALONE_PRGM := bin/build_env.pl  bin/checkExec.in bin/parseLDD.in  bin/getmode.sh  \
-                   bin/ibrun bin/tacc_affinity bin/tacc_rsh bin/readRMap.lua
+                   bin/ibrun.sge bin/ibrun.slurm bin/tacc_affinity bin/tacc_rsh bin/readRMap.lua
 VDATE		:= $(shell date +'%F %H:%M')
 
 REQUIRED_PKGS   :=                \
@@ -26,6 +26,11 @@ all:
 	@echo done
 
 install: $(DIRLIST) PRGMS PKGS
+	@for i in *.$(QUEUE_T); do       \
+	  fn=`basename $$i .$(QUEUE_T)`; \
+          echo ln -s $$i $$fn ;          \
+          ln -s $$i $$fn;                \
+	done
 
 $(DIRLIST) :
 	mkdir -p $@
